--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 ################################################################################
 
 /.vs/UI/FileContentIndex/5eb2e714-1647-49ba-966a-d88dc971bc35.vsidx
+/.vs/ProjectSettings.json
+/.vs/slnx.sqlite-journal
+/.vs/VSWorkspaceState.json
+/.vs
